bike.2015/06/11.16_26_49.92.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	new file:   Doc/Bike/Tool.cs
	modified:   History.txt
	modified:   ZGame/game_tutorials/Win32/Map Editor/Init.cpp

+---------+---------+---------+---------+---------+---------+---------+---------+ 
mapeditor01.2015/06/12.15_11_27.45.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	modified:   ZGame/game_tutorials/Win32/Map Editor/Main.cpp
	modified:   ZGame/game_tutorials/Win32/Map Editor/Tile.cpp
	modified:   ZGame/game_tutorials/Win32/Map Editor/Tile.h

+---------+---------+---------+---------+---------+---------+---------+---------+ 
mapeditor02.2015/06/12.16_33_06.98.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	new file:   Doc/Cursor/Using Cursors.cs
	modified:   History.txt
	modified:   ZGame/game_tutorials/Win32/Map Editor Part2/Main.cpp
	modified:   ZGame/game_tutorials/Win32/Map Editor Part2/Tile.cpp
	modified:   ZGame/game_tutorials/Win32/Map Editor Part2/Tile.h

+---------+---------+---------+---------+---------+---------+---------+---------+ 
mapeditor03.2015/06/12.17_41_14.66.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	new file:   Doc/gdi/SelectObject.cs
	modified:   History.txt
	modified:   ZGame/T.ZGame.cs
	modified:   ZGame/game_tutorials/Win32/Map Editor Part3/Bitmap.cpp
	modified:   ZGame/game_tutorials/Win32/Map Editor Part3/Init.cpp
	modified:   ZGame/game_tutorials/Win32/Map Editor Part3/Main.cpp
	modified:   ZGame/game_tutorials/Win32/Map Editor Part3/Tile.cpp
