@@ -59,8 +59,34 @@
        Zcl_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
        Zcl_E : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
      Zndex_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Zndex_E : //z 2015-06-10 17:00:28 L.204'25172 T526380431 .K ~354 +----+----+----+----+----+
-     TimeCnt : //z 2015-06-09 11:00:50 L.205'46750 T4035241548.K ~14  +----+----+----+----+----+
+      L161,  1:R#.1    @日知录
+      L169,  2:R#.2    @第17周总结 2015-04-26 --> 2015-05-02
+      L173,  3:zdo focus windows system programming 以及工程实践。
+      L176,  4:zkaizen 纯粹的肥肉还是别吃了；肉食类不要吃冷的。饭店吃饭尽量点热的。
+      L187,  5:R#.3    @国务院办公厅关于2015年部分节假日安排的通知
+      L207,  6:R#.4    @流程图 软件推荐
+      L229,  7:todo 阅读《我用VISIO制图》done 2015-04-28 16:26 当晚未看。
+      L232,  8:R#.5    @绘制类图，类继承
+      L237,  9:R#.6    @EA公司发表自制的EASTL规格 游戏开发方面对STL的性能及功能需求的特点
+      L241, 10:R#.7    @参考下 cp 上的 tl 功能，看能否增强n.tl
+      L246, 11:R#.8    @收集方方面面的模式和实例。
+      L252, 12:R#.9    @收集一份vc6的常用插件
+      L257, 13:R#.10   @zdo 使用 libcurl 写个http post[简繁转化]的例子
+      L262, 14:R#.11   @关灯吃面
+      L270, 15:R#.12   @znote astyle -A1 -R -z1 -n *.cpp
+      L274, 16:R#.13   @zlog hosts
+      L277, 17:zkz Moving from Research to Practice to Close the Achievement Gap
+      L280, 18:R#.14   @3ds max
+      L332, 19:zitem haptix/evolution3d googlecode
+      L335, 20:R#.15   @CMakeFile
+      L372, 21:R#.16   @3ds
+      L382, 22:zitem freeimage 结合play，载入其他类型素材（不限于tga）
+      L385, 23:R#.17   @high performance lock
+      L396, 24:R#.18   @3ds
+      L405, 25:R#.19   @znote BookList
+      L408, 26:todo 深入理解nginx redis设计与实现
+     Zndex_E : //z 2015-06-18 08:36:26 L.196'55414 T2695262782.K ~356 +----+----+----+----+----+
+     TimeCnt : //z 2015-06-18 08:36:25 L.196'55415 T2695262781.K ~15  +----+----+----+----+----+
      Reg.Cnt : //z 2015-06-09 11:00:48 L.205'46752 T4035241523.K ~19  +----+----+----+----+----+
      #19  R+ : //z 2015-06-09 11:00:48 L.205'46752 T4035241523.K ~19    V+.363  L+.380  
      #18  R+ : //z 2015-06-05 17:33:01 L.209'23219 T2926574672.K ~18    V+.354  L+.368  
@@ -81,8 +107,9 @@
      #3   R+ : //z 2015-04-27 11:35:34 L.248'44666 T1420042932.K ~3     V+.29   L+.108  
      #2   R+ : //z 2015-04-27 11:31:41 L.248'44899 T1419899214.K ~2     V+.19   L+.104  
      #1   R+ : //z 2015-04-27 11:28:08 L.248'45112 T1418964727.K ~1     V+.3    L+.62   
-     File.Op : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Version : //z 2015-06-10 17:00:28 L.204'25172 T526380431 .K ~373   R+.19   L+.383  --+----+
+     File.Op : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1   +----+----+----+----+----+
+     #1   O+ : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1     V+.374  L+.1    
+     Version : //z 2015-06-18 08:36:26 L.196'55414 T2695262782.K ~375   R+.19   L+.412  --+----+
      #19  R+ : //z 2015-06-09 11:00:48 L.205'46752 T4035241523.K ~363   R+.19   L+.381  V+.363  
      #19  V+ : //z 2015-06-05 17:33:48 L.209'23172 T2926574811.K ~361   R+.18   L+.373  
      #18  R+ : //z 2015-06-05 17:33:01 L.209'23219 T2926574672.K ~354   R+.18   L+.369  V+.354  
@@ -381,4 +408,6 @@ http://sourceforge.net/p/osgmaxexp/code/HEAD/tree/
 //z 2015-06-09 11:00:50 L.205'46750 T4035241548.K[T14,L381,R19,V365]
 05-25 12:54 todo 深入理解nginx redis设计与实现
 
+//z 2015-06-18 08:36:25 L.196'55415 T2695262781.K[T15,L411,R19,V375]
+http://sale.jd.com/act/Pfj50sdUDAJ.html
 #endregion //z 2015-06-09 11:00:48 L.205'46752 BG57IV3@XCL T4035241523.K.F4146951713-+----+----+
