@@ -8167,3 +8167,14 @@ Changes to be committed:
 	modified:   ZGame/game_tutorials/Win32/Map Editor Part3/Main.cpp
 	modified:   ZGame/game_tutorials/Win32/Map Editor Part3/Tile.cpp
 
++---------+---------+---------+---------+---------+---------+---------+---------+ 
+book.2015/06/18.08_36_43.25.K.MzM.T@WS 
+On branch master
+Your branch is up-to-date with 'origin/master'.
+
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+	modified:   Doc/K/T.2015.BugFree.cs
+	modified:   History.txt
+
